[package]
name = "league_tool"
version = "0.1.0"
authors = ["Luis Gonzalez <gonzalezdavidr22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
serde = {version="1.0.104", features = ["derive"]} 
serde_json = "1.0.44"
reqwest = "0.6.0"
inputbot = "0.4.0"
async-timer = "0.7.1"